--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet" />
     <link rel="canonical" href="/" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/cropped-favistrath.png"/>  
 
     <meta property="og:title" content="Elchanan for President" />
     <meta property="og:description" content="Achievements delivered. A bold, credible vision for our University." />
