--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elchanan for President!</title>
     <meta name="description" content="Proven leadership as Secretary General. Explore achievements, current manifesto, and ways to connect." />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Elchanan Kiptoo" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet" />
     <link rel="canonical" href="/" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./public/cropped-favistrath.png"/>  
+    <link rel="icon" type="image/png" sizes="32x32" href="./cropped-favistrath.png"/>  
 
-    <meta property="og:title" content="Elchanan for President" />
+    <meta property="og:title" content="Vote Elchanan for President" />
     <meta property="og:description" content="Achievements delivered. A bold, credible vision for our University." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://elchanankiptoo.vercel.app/e-portrait-frontfacing.jpeg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://elchanankiptoo.vercel.app/e-portrait-frontfacing.jpeg" />
   </head>
 
   <body class="dark">
