removed 'vote' from 'vote Elchanan for president'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="canonical" href="/" />
     <link rel="icon" type="image/png" sizes="32x32" href="./cropped-favistrath.png"/>  
 
-    <meta property="og:title" content="Vote Elchanan for President" />
+    <meta property="og:title" content="Elchanan for President" />
     <meta property="og:description" content="Achievements delivered. A bold, credible vision for our University." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://elchanankiptoo.vercel.app/e-portrait-frontfacing.jpeg" />
