favicon updated better

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet" />
     <link rel="canonical" href="/" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./cropped-favistrath.png"/>  
+    <link rel="icon" type="image/png" sizes="48x48" href="./favicon-strath-nobg-nowords-48x48.png" />
 
     <meta property="og:title" content="Elchanan for President" />
     <meta property="og:description" content="Achievements delivered. A bold, credible vision for our University." />
@@ -19,7 +19,7 @@
     <meta property="og:image" content="https://elchanankiptoo.vercel.app/e-portrait-frontfacing.jpeg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@elchanankiptoo" />
     <meta name="twitter:image" content="https://elchanankiptoo.vercel.app/e-portrait-frontfacing.jpeg" />
   </head>
 
