--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="48x48" href="./favicon-strath-nobg-nowords-48x48.png" />
 
     <meta property="og:title" content="Elchanan for President" />
-    <meta property="og:description" content="Achievements delivered. A bold, credible vision for our University." />
+    <meta property="og:description" content="Proven leadership. Credible vision"   />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://elchanankiptoo.vercel.app/e-portrait-frontfacing.jpeg" />
 
